dev/argocd/argocd-application.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocd-server
  name: argocd-server
  namespace: argocd
spec:
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30080
  selector:
    app: argocd-server
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: nginx # Specify the Traefik ingress class explicitly
  rules:
    - host: argocd.halo.fabseit.net # Match the host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server # Backend service name
                port:
                  number: 8080 # Backend service port
  tls:
    - hosts:
        - argocd.halo.fabseit.net # TLS will apply to this host
      secretName: argocd-fabseit-net-prod-tls # Reference to the TLS secret
